# vertex-proxy-rs

./: .gitignore  Cargo.toml  README.id.md  README.md  config.example.yaml
docs/: VEO_SUPPORT_REPORT.md
src/: auth.rs  config.rs  main.rs  models.rs  rate_limit.rs  retry.rs
src/routes/: admin.rs  anthropic.rs  health.rs  mod.rs  openai.rs  veo.rs
src/transform/: anthropic_to_gemini.rs  anthropic_to_openai.rs  gemini_stream.rs  mod.rs  openai_stream.rs  schema_clean.rs  sse_parser.rs
