[package]
name = "vertex-proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
